[package]
name = "sled_nif"
version = "0.1.0-alpha.2"
authors = ["Eric Entin <eric@ericent.in>"]
edition = "2018"

[features]
io_uring = ["sled/io_uring"]

[lib]
name = "sled_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "^0.22.0-rc"
lazy_static = "^1"
sled = "^0"
crossbeam-channel = "^0"
crossbeam-utils = "^0"
